Biased locking